--- a/style1.css
+++ b/style1.css
@@ -7,8 +7,12 @@ h1{
 p{
 	text-align: center;
 	float:right;
-	padding-left:643px;
+	padding-left:1603px;
 	padding-bottom:800px;
+}
+
+ul{
+	text-align:center;
 }
 
 li{
